--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 
 <body>
     <header>PARROT CARD GAME</header>
+    <div class="relogio">
+        0
+    </div>
 
     <main>
 
     </main>
+
     <script src="script.js"></script>
 </body>
 
